--- a/ModernStore/ModersStore.Shared/ModersStore.Shared.csproj
+++ b/ModernStore/ModersStore.Shared/ModersStore.Shared.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FE5BBE89-049C-46D0-B35A-CD70AB678F8D}</ProjectGuid>
+    <ProjectGuid>{2E47AAFE-AEA4-4F03-8A23-16CA8FB0C8D7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ModernStore.Domain</RootNamespace>
-    <AssemblyName>ModernStore.Domain</AssemblyName>
+    <RootNamespace>ModersStore.Shared</RootNamespace>
+    <AssemblyName>ModersStore.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -38,15 +38,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Customer.cs" />
-    <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ModersStore.Shared\ModersStore.Shared.csproj">
-      <Project>{2e47aafe-aea4-4f03-8a23-16ca8fb0c8d7}</Project>
-      <Name>ModersStore.Shared</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
